# KaguraDB

./: .gitignore  CMakeLists.txt  Common.hpp  README.md  test.cc  test.sql  test2.sql
BaseSpec/: Files.hpp  Op.hpp  Schema.hpp  Types.hpp
BufferManager/: Block.cpp  Block.hpp  BlockSpec.hpp  BufferManager.cpp  BufferManager.hpp  FileService.cpp  FileService.hpp
CatalogManager/: CatalogManager.hpp
Errors/: BaseLogger.hpp
Errors/BufferError/: BufferError.cpp  BufferError.hpp
Errors/CatalogError/: CatalogError.cpp  CatalogError.hpp
Errors/IndexError/: IndexError.cpp
Errors/InterpreterError/: ParserError.cpp  ParserError.hpp
Errors/RuntimeError/: RuntimeError.cpp  RuntimeError.hpp
Errors/SQLError/: SQLError.hpp
Parser/: Lexer.hpp  ParseException.hpp  Parser.hpp  Token.cpp  Token.hpp
data/: student.txt
include/: Common.hpp
include/API/: API.hpp
include/AppContainer/: AppContainer.hpp  HeaderUI.hpp  REHL.hpp
include/BaseSpec/: Files.hpp  Schema.hpp  Types.hpp
include/BufferManager/: Block.hpp  BlockSpec.hpp  BufferManager.hpp  FileService.hpp
include/CatalogManager/: CatalogManager.hpp  SchemaSpec.hpp
include/Errors/: BaseLogger.hpp
include/IndexManager/: BPlusIndex.hpp  IndexManager.hpp  IndexSpec.hpp
include/Parser/: AST.hpp  Parser.hpp  Token.hpp
include/RecordManager/: RecordManager.hpp  RecordSpec.hpp
resource/: headerUI.ui
src/: main.cpp
src/API/: API.cpp
src/AppContainer/: AppContainer.cpp  REHL.cpp
src/BaseSpec/: Files.cpp
src/BufferManager/: Block.cpp  BufferManager.cpp  (+1 more)
utils/: BufferManagerU.hpp  Utils.hpp
(+15 files in other folders)
